--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,33 +1,3 @@
-#root {
-    width: 100vw;
-    height : 100vh;
-    background-color: rgb(218, 149, 59);
-    background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
+body {
+  font-family: 'Poppins', sans-serif;
 }
-
-.particle-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Behind all other content */
-  }
-  
-  .content {
-    position: relative;
-    z-index: 1; /* Above particle background */
-  }
-  
-  .canvas-wrapper {
-    position: relative;
-    width: 100%;
-    height: 500px; /* Adjust as needed */
-  }
-  
-  canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  
