--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,17 +3,9 @@
 @tailwind utilities;
 
 /* Ensure the body and html fill the viewport */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0%;
+body {
+    font-family: 'IBM Plex Sans', sans-serif;
+    
 }
 
-/* Additional styles for your particle background if needed */
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+
