Added and Updated

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,7 +4,7 @@
 
 /* Ensure the body and html fill the viewport */
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
+     font-family: "Geist", sans-serif;
     
 }
 
